# badhal

./: CMakeLists.txt  readme.md
src/: Main.c  Main.s  startup_stm32h750xbhx.s
src/hal/: bad.h  badhal.h  cache.h  intrin.h  memory.c  roka.h  sys.c
src/hal/cmsis/: STM32H750x.h  cmsis_gcc.h
src/hal/hw/: flash.h  fmc.h  gpio.h  ltdc.h  mpu.h  nvic.h  pwr.h  rcc.h  scb.h  syscfg.h  systick.h
